[package]
name = "rastertrace-wasm"
version = "1.0.0"
edition = "2021"
description = "WASM bindings around vtracer for the RasterTrace web app"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
vtracer = { version = "0.6", default-features = false }
visioncortex = "0.8"
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
